--- a/src/components/Registration.css
+++ b/src/components/Registration.css
@@ -15,6 +15,7 @@
   .registration-container form {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   
   .registration-container label {
@@ -30,17 +31,18 @@
     border-radius: 3px;
   }
   
+  
   .registration-container button[type="submit"] {
     padding: 10px;
     border: none;
     border-radius: 3px;
-    background-color: #007bff;
+    background-color: #ffa600;
     color: #fff;
     cursor: pointer;
   }
   
   .registration-container button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #ffa600;
   }
   
   .error-message {
